--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .navbar-button {
+        @apply transition ease-in-out w-1/2 self-center bg-primary text-sectext hover:text-white;
+    }
+}
